--- a/package.json
+++ b/package.json
@@ -1,26 +1,40 @@
 {
-  "name": "zip-dir",
-  "version": "2.0.0",
+  "name": "@caldwell619/zip-dir",
+  "version": "0.0.0",
   "description": "Zips up directories into buffers or saves zipped files to disk",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec --ui bdd"
+    "format": "prettier --write src && prettier --write tests",
+    "lint": "eslint --ext .ts",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "build": "tsc --p ./tsconfig.build.json && tscpaths -p tsconfig.json -s ./src -o dist"
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/jsantell/node-zip-dir"
+    "url": "http://github.com/christopher-caldwell/node-zip-dir"
   },
-  "author": "Jordan Santell",
   "devDependencies": {
+    "@types/async": "^3.2.12",
+    "@types/colors": "^1.2.1",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.25",
     "buffer-equal": "*",
     "chai": "*",
+    "eslint": "^8.13.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "fs-extra": "^9.0.1",
+    "jest": "^27.4.3",
     "mocha": "*",
+    "prettier": "^2.6.2",
+    "rc": "^1.2.8",
+    "tscpaths": "^0.0.9",
+    "typescript": "^4.6.3",
     "unzipper": "^0.10.11"
   },
   "license": "MIT",
   "dependencies": {
-    "jszip": "^3.2.2",
-    "async": "^3.2.0"
+    "async": "^3.2.0",
+    "jszip": "^3.2.2"
   }
 }
