--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
   },
   "devDependencies": {
     "@types/async": "^3.2.12",
+    "@types/buffer-equal": "^1.0.0",
     "@types/colors": "^1.2.1",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.25",
-    "buffer-equal": "*",
+    "@types/unzipper": "^0.10.5",
+    "buffer-equal": "^1.0.0",
     "chai": "*",
     "eslint": "^8.13.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^10.1.0",
     "jest": "^27.4.3",
     "mocha": "*",
     "prettier": "^2.6.2",
     "rc": "^1.2.8",
+    "ts-jest": "^27.1.4",
     "tscpaths": "^0.0.9",
     "typescript": "^4.6.3",
     "unzipper": "^0.10.11"
