--- a/package.json
+++ b/package.json
@@ -1,19 +1,40 @@
 {
   "name": "@caldwell619/zip-dir",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Zips up directories into buffers or saves zipped files to disk",
-  "main": "dist/index.js",
   "scripts": {
     "format": "prettier --write src && prettier --write tests",
     "lint": "eslint --ext .ts",
     "type-check": "tsc --noEmit",
     "test": "jest",
-    "build": "tsc --p ./tsconfig.build.json && tscpaths -p tsconfig.json -s ./src -o dist"
+    "build": "microbundle --tsconfig tsconfig.build.json --compress --target node",
+    "release": "standard-version",
+    "publish-release": "git push --follow-tags origin master && yarn publish",
+    "prepublishOnly": "yarn build",
+    "deploy": "sh scripts/publish.sh"
   },
+  "dependencies": {
+    "async": "^3.2.0",
+    "jszip": "^3.2.2"
+  },
+  "source": "src/index.ts",
+  "main": "dist/index.js",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "http://github.com/christopher-caldwell/node-zip-dir"
   },
+  "bugs": {
+    "url": "http://github.com/christopher-caldwell/node-zip-dir/issues"
+  },
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "zipper",
+    "node",
+    "zip"
+  ],
   "devDependencies": {
     "@types/async": "^3.2.12",
     "@types/buffer-equal": "^1.0.0",
@@ -28,6 +49,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "fs-extra": "^10.1.0",
     "jest": "^27.4.3",
+    "microbundle": "^0.14.2",
     "mocha": "*",
     "prettier": "^2.6.2",
     "rc": "^1.2.8",
@@ -35,10 +57,5 @@
     "tscpaths": "^0.0.9",
     "typescript": "^4.6.3",
     "unzipper": "^0.10.11"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "async": "^3.2.0",
-    "jszip": "^3.2.2"
   }
 }
